@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>717</width>
-    <height>400</height>
+    <height>328</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -263,6 +263,13 @@
                  <widget class="QCheckBox" name="m_logostuds">
                   <property name="text">
                    <string>Use logoed studs</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QCheckBox" name="linelengths">
+                  <property name="text">
+                   <string>Display line lenghts when drawing</string>
                   </property>
                  </widget>
                 </item>
